--- a/dev/stylesheets/style.styl
+++ b/dev/stylesheets/style.styl
@@ -11,9 +11,10 @@ html
   -webkit-text-size-adjust 100%
   -ms-text-size-adjust     100%
 
-
 body
   font em(16)\/em(24) mg, Arial, sans-serif normal
+  
+
 
 /* Less Than IE10 ********************************************************************/  
 
@@ -26,6 +27,7 @@ body
   .nextSection--arrowWrapper
     .nextSection--arrow
       background-image none
+ 
 
 
 /* Mail icon ********************************************************************/
@@ -153,6 +155,9 @@ section
 
 /* Section--intro *****************************************************************/
 
+.section--intro
+  background-image none
+  
 .logo
   &:visited
     color black
@@ -160,7 +165,7 @@ section
   &:before,
   &:after
     fakeContent()
-    width             200%
+    width             100%
     left              50%
     height            1px
     background-color  lighten(black,75%)
@@ -174,7 +179,7 @@ section
     transform   rotate(45*5deg)
 
   &:after
-    width       200%
+    width       100%
     transform   rotate(45deg)
     margin-left 175px
     margin-top  15px
@@ -198,11 +203,12 @@ section
 
     &:after
       width       88vw
-      top         $logo-image-size_laptop + $logo-image-padding
+      transform   rotate(45*5deg)
+      top         calc(280px + 50vw)
+      left        calc(280px + 50vw)
+      margin-left 0
+      margin-top  0
       bottom      auto
-      left        @top
-      margin-left auto
-      margin-top  auto
       
   @media screen and (min-width $laptop['min-width'])
     &:before
